--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   provider: ^6.0.2
   flutter_linkify: ^5.0.2
   url_launcher: ^6.0.20
+  path_provider: ^2.0.9
+  async: ^2.8.2
 
 dev_dependencies:
   flutter_test:
