--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   url_launcher: ^6.0.20
   path_provider: ^2.0.9
   async: ^2.8.2
+  wakelock: ^0.6.1+2
 
 dev_dependencies:
   flutter_test:
