--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -50,11 +50,23 @@ android {
         versionName flutterVersionName
     }
 
+    signingConfigs {
+        config {
+            keyAlias "onekki"
+            keyPassword "101614"
+            storeFile file("onekki.jks")
+            storePassword "101614"
+        }
+    }
+
     buildTypes {
         release {
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
-            signingConfig signingConfigs.debug
+            signingConfig signingConfigs.config
+        }
+        debug {
+            signingConfig signingConfigs.config
         }
     }
 }
